--- a/Kubernetes/wa-productstoolsapi-deployment.yaml
+++ b/Kubernetes/wa-productstoolsapi-deployment.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
         - name: wa-productstoolsapi-container
-          image: willmarques/wa-fastfoodselfservice.products_tools_api:latest
+          image: 659767469388.dkr.ecr.us-east-1.amazonaws.com/wa-fastfood/wa-fastfoodselfservice.products_tools_api:latest
           ports:
             - containerPort: 5001
           envFrom:
