--- a/Kubernetes/wa-productstoolsapi-deployment.yaml
+++ b/Kubernetes/wa-productstoolsapi-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             initialDelaySeconds: 20
           readinessProbe:
             httpGet:
-              path: /
+              path: /api/v1/health
               port: 5001
             periodSeconds: 10
             failureThreshold: 5
