--- a/Kubernetes/wa-productstoolsapi-configmap.yaml
+++ b/Kubernetes/wa-productstoolsapi-configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: wa-productstoolsapi-configmap
 data:
   ASPNETCORE_ENVIRONMENT: "Development"
-  ConnectionStrings__DefaultConnection: "Server=fastfood-db.czbnxjpgfykv.us-east-1.rds.amazonaws.com;Port=5432;Database=FastFoodDB;User Id=postgres;Password=FastFoodDB#321;"
+  ConnectionStrings__DefaultConnection: "Server=fastfood-db.cxbvsei04qc5.us-east-1.rds.amazonaws.com;Port=5432;Database=FastFoodDB;User Id=postgres;Password=FastFoodDB#321;"
